--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <link rel="stylesheet" type="text/css" href="theme.css" />
   </head>
 
-  <body></body>
+  <body>
+    <p>aa</p>
+  </body>
 </html>
